--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,6 +3,7 @@
   vars:
     borg_home: /var/backup
     borg_users:
-      ovv: "{{ lookup('file', 'tests/id_rsa.pub') }}"
+      ovv: 
+        - "{{ lookup('file', 'tests/id_rsa.pub') }}"
   roles:
     - ansible-role-borg
